--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <section id="inicio" class="hero text-center text-white d-flex align-items-center justify-content-center">
     <div class="container">
       <h1 class="display-4 fw-bold fade-in">Desafio 7 Dias pelo Planeta Água</h1>
-      <p class="lead fade-in-delay">Pequenas ações que geram grandes ondas 🌊</p>
+      <p class="lead fade-in-delay">Pequenas ações que geram grandes mudanças 🌊</p>
       <a href="#desafios" class="btn btn-light btn-lg mt-3">Começar o Desafio</a>
     </div>
   </section>
@@ -56,19 +56,19 @@
   </section>
 
   <footer class="text-center py-3 text-white">
-    <p class="mb-0">&copy; 2025 Desafio 7 Dias pelo Planeta Água | IFMG Ribeirão das Neves</p>
+    <p class="mb-0">&copy; 2025 Desafio 7 Dias pelo Planeta Água</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const desafios = [
       'Reduzir o tempo do banho 🚿',
-      'Recolher lixo próximo de um córrego 🗑️',
       'Descobrir de onde vem a água da sua casa 💧',
       'Reaproveitar água no dia a dia 🌱',
-      'Fazer uma postagem educativa 💬',
+      'Fechar a torneira enquanto escova os dentes ou lava as vasilhas 💬',
+      'Recolher lixo próximo de um córrego 🗑️',
       'Criar algo com material reciclável ♻️',
-      'Compartilhar o que aprendeu 💙'
+      'Reduzir o consumo de produtos que gastam muita água pra produzir 💙'
     ];
 
     const container = document.getElementById('cards-container');
@@ -86,7 +86,7 @@
             </div>
             <div class="flip-card-back d-flex align-items-center justify-content-center flex-column">
               <p>${texto}</p>
-              <button class="btn btn-success mt-3" onclick="markCompleted(${index})">Concluído ✅</button>
+              <button class="btn btn-success mt-3" onclick="markCompleted(${index})">Concluído</button>
             </div>
           </div>
         </div>
