--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
+      // ======== DESAFIOS ========
       const desafios = [
         'Reduzir o tempo do banho 🚿',
         'Descobrir de onde vem a água da sua casa 💧',
@@ -179,3 +180,4 @@
   </script>
 </body>
 </html>
+
