Change project title and update challenges
Updated project title and challenge descriptions.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">🌊 Planeta Água</a>
+      <a class="navbar-brand fw-bold" href="#">🌊 Desafio Azul</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,7 +26,7 @@
   </nav>
   <section id="inicio" class="hero text-center text-white d-flex align-items-center justify-content-center">
     <div class="container">
-      <h1 class="display-4 fw-bold fade-in">Desafio 7 Dias pelo Planeta Água</h1>
+      <h1 class="display-4 fw-bold fade-in">Desafio Azul, 7 Dias pelo Planeta Água</h1>
       <p class="lead fade-in-delay">Pequenas ações que geram grandes mudanças 🌊</p>
       <a href="#desafios" class="btn btn-light btn-lg mt-3">Começar o Desafio</a>
     </div>
@@ -34,7 +34,7 @@
   <section id="sobre" class="py-5">
     <div class="container text-center">
       <h2 class="mb-4">🌍 Sobre o Projeto</h2>
-      <p class="lead">O Desafio 7 Dias pelo Planeta Água incentiva a conscientização sobre o uso da água e mostra como pequenas ações locais ajudam a proteger nossos oceanos e o clima global.</p>
+      <p class="lead">O Desafio Azul, 7 Dias pelo Planeta Água incentiva a conscientização sobre o uso da água e mostra como pequenas ações locais ajudam a proteger nossos oceanos e o clima global.</p>
     </div>
   </section>
   <section id="desafios" class="py-5 bg-light">
@@ -65,12 +65,12 @@
     document.addEventListener("DOMContentLoaded", function () {
       // ======== DESAFIOS ========
       const desafios = [
-        'Reduzir o tempo do banho 🚿',
+        'Identifique áreas onde você pode reduzir a água',
         'Descobrir de onde vem a água da sua casa 💧',
         'Reaproveitar água no dia a dia 🌱',
         'Fechar a torneira enquanto escova os dentes ou lava as vasilhas 💬',
-        'Recolher lixo próximo de um córrego 🗑️',
-        'Criar algo com material reciclável ♻️',
+        'Evitar jogar produtos químicas em ralos, pias e outros 🗑️',
+        'Reduzir o tempo de banho 🚿',
         'Reduzir o consumo de produtos que gastam muita água pra produzir 💙'
       ];
 
@@ -180,4 +180,5 @@
   </script>
 </body>
 </html>
+
 
