--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Desafio 7 Dias pelo Planeta Água</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
@@ -24,6 +24,7 @@
       </div>
     </div>
   </nav>
+
   <section id="inicio" class="hero text-center text-white d-flex align-items-center justify-content-center">
     <div class="container">
       <h1 class="display-4 fw-bold fade-in">Desafio Azul, 7 Dias pelo Planeta Água</h1>
@@ -31,12 +32,14 @@
       <a href="#desafios" class="btn btn-light btn-lg mt-3">Começar o Desafio</a>
     </div>
   </section>
+
   <section id="sobre" class="py-5">
     <div class="container text-center">
       <h2 class="mb-4">🌍 Sobre o Projeto</h2>
       <p class="lead">O Desafio Azul, 7 Dias pelo Planeta Água incentiva a conscientização sobre o uso da água e mostra como pequenas ações locais ajudam a proteger nossos oceanos e o clima global.</p>
     </div>
   </section>
+
   <section id="desafios" class="py-5 bg-light">
     <div class="container">
       <h2 class="text-center mb-3">💦 Os 7 Desafios</h2>
@@ -49,6 +52,19 @@
       <div id="completion-banner" class="text-center mt-5 d-none">
         <h3 class="mb-4">🏁 Você completou os 7 desafios!</h3>
         <button id="shareButton" class="btn btn-primary mt-3">Compartilhar Conclusão 💧</button>
+      </div>
+    </div>
+
+    <!-- Calculadora de economia de água -->
+    <div class="container mt-5">
+      <h3 class="text-center mb-3">Calculadora de Economia de Água no Banho</h3>
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <label for="minutos" class="form-label">Quantos minutos você economizou no banho?</label>
+          <input type="number" id="minutos" class="form-control" min="0" placeholder="Ex: 3" />
+          <button id="calcular" class="btn btn-primary mt-3">Calcular Economia</button>
+          <div id="resultado" class="mt-3 alert alert-info d-none"></div>
+        </div>
       </div>
     </div>
   </section>
@@ -78,11 +94,6 @@
       const completionBanner = document.getElementById('completion-banner');
       const mensagem = document.getElementById('mensagem');
       const progressBar = document.getElementById('progress-bar');
-      const quizSection = document.getElementById('quiz');
-      const quizQuestion = document.getElementById('quiz-question');
-      const quizOptions = document.getElementById('quiz-options');
-      const quizResult = document.getElementById('quiz-result');
-      const quizScore = document.getElementById('quiz-score');
       const applause = document.getElementById('applause');
 
       let completed = JSON.parse(localStorage.getItem('completedChallenges')) || Array(7).fill(false);
@@ -119,8 +130,7 @@
       function checkCompletion() {
         if (completed.every(c => c)) {
           completionBanner.classList.remove('d-none');
-          quizSection.classList.remove('d-none');
-          startQuiz();
+          // Aqui você tinha código para quiz, mas estava comentado/incompleto
         }
       }
 
@@ -176,9 +186,28 @@
           console.error('Erro ao compartilhar:', err);
         }
       });
+
+      // ====== Calculadora de Economia de Água ======
+      const litrosPorMinuto = 12; // média de litros por minuto no banho
+
+      document.getElementById('calcular').addEventListener('click', () => {
+        const minutosInput = document.getElementById('minutos');
+        const resultadoDiv = document.getElementById('resultado');
+        const minutos = parseFloat(minutosInput.value);
+
+        if (isNaN(minutos) || minutos < 0) {
+          resultadoDiv.textContent = 'Por favor, insira um número válido de minutos.';
+          resultadoDiv.classList.remove('d-none', 'alert-info', 'alert-success');
+          resultadoDiv.classList.add('alert-danger');
+          return;
+        }
+
+        const aguaEconomizada = minutos * litrosPorMinuto;
+        resultadoDiv.textContent = `Você economizou aproximadamente ${aguaEconomizada.toFixed(1)} litros de água! 💧`;
+        resultadoDiv.classList.remove('d-none', 'alert-danger');
+        resultadoDiv.classList.add('alert-success');
+      });
     });
   </script>
 </body>
 </html>
-
-
