Enhance index.html with water savings calculator
Added a calculator section to estimate water savings during showers and updated navigation links.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li class="nav-item"><a class="nav-link active" href="#inicio">Início</a></li>
           <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
           <li class="nav-item"><a class="nav-link" href="#desafios">Desafios</a></li>
+          <li class="nav-item"><a class="nav-link" href="#calculadora">Calculadora de economia</a></li>
         </ul>
       </div>
     </div>
@@ -51,7 +52,7 @@
         <button id="shareButton" class="btn btn-primary mt-3">Compartilhar Conclusão 💧</button>
       </div>
     </div>
-    <div class="container mt-5">
+    <div id="calculadora" class="container mt-5">
       <h3 class="text-center mb-3">Calculadora de Economia de Água no Banho</h3>
       <div class="row justify-content-center">
         <div class="col-md-6">
@@ -201,4 +202,5 @@
   </script>
 </body>
 </html>
+
 
